feat: add basic layout and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="shortcut icon" href="./assets/icon/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Hello</h1>
+    <header class="header">
+        <div class="container">
+
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <h1>Hello</h1>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+
+        </div>
+    </footer>
 </body>
 </html>
