--- a/index.html
+++ b/index.html
@@ -42,12 +42,146 @@
     </header>
     <main class="main">
         <div class="container">
-            <h1>Hello</h1>
+            <section class="profile" id="profile">
+                <img src="./assets/img/avatar.png" alt="avatar" class="profile__img">
+                <h1 class="h1">
+                    DMITRII KONDRATSKII
+                </h1>
+                <div class="profile__line"></div>
+                <p class="profile__description">
+                    JUNIOR FRONT-END DEVELOPER
+                </p>
+            </section>
+            <section class="contacts" id="contacts">
+                <h2 class="title">
+                    CONTACTS
+                </h2>
+                <ul class="contats__list">
+                    <li class="contacts__item">
+                        <a href="#" class="contacts__link">Volzhskiy, Russia</a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="" class="contacts__link mail">dkondr34@mail.ru</a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="" class="contacts__link github">dkondr</a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="" class="contacts__link telegram">@dkondr34</a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="" class="contacts__link discord">dkondr34</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="summary" id="summary">
+                <h2 class="title">
+                    SUMMARY
+                </h2>
+                <p class="summary__description">
+                    I like information technology, web programming and everything related to computer science. I have a main job. Programming is a hobby for me. I have no practical experience in programming. I became an RSSchool student to gain experience in IT, as well as the necessary skills and practice. I am open to offers, I will be glad to join Open Source projects, as well as work under the leadership of a mentor. I am not afraid to set challenging goals and achieve them.
+                </p>
+            </section>
+            <section class="skills" id="skills">
+                <h2 class="title">
+                    SKILLS
+                </h2>
+                <ul class="skills__list">
+                    <li class="skills__item">
+                        <a href="" class="skills__link">JavaScript, HTML5, CSS3</a>
+                    </li>
+                    <li class="skills__item">
+                        <a href="" class="skills__link">Sass, Scss</a>
+                    </li>
+                    <li class="skills__item">
+                        <a href="" class="skills__link">Figma</a>
+                    </li>
+                    <li class="skills__item">
+                        <a href="" class="skills__link">Git, Github</a>
+                    </li>
+                    <li class="skills__item">
+                        <a href="https://www.codewars.com/users/dkondr/badges/small" class="skills__link">
+                            <img src="https://www.codewars.com/users/dkondr/badges/large" alt="Codewarrior Profile Badges">
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="code" id="code">
+                <h2 class="title">
+                    CODE
+                </h2>
+                <pre>
+                    <code>
+                        function even_or_odd(number) {
+                            return number = ( number % 2 === 0) ? "Even" : "Odd";
+                        }
+                    </code>
+                </pre>
+            </section>
+            <section class="courses" id="courses">
+                <h2 class="title">
+                    COURSES
+                </h2>
+                <ul class="courses__list">
+                    <li class="courses__item">
+                        <a href="" class="courses__link">Hexlet - JavaScript for beginner</a>
+                    </li>
+                    <li class="courses__item">
+                        <a href="" class="courses__link">ITVDN - "JavaScript starter"</a>
+                    </li>
+                    <li class="courses__item">
+                        <a href="" class="courses__link">HTMLacademy - simulators, marathons and skills</a>
+                    </li>
+                    <li class="courses__item">
+                        <a href="" class="courses__link">YouTube channel "JavaRush" - Harvard CS50 - 2016</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="projects" id="projects">
+                <h2 class="title">
+                    PROJECTS
+                </h2>
+                <ul class="projects__list">
+                    <li class="projects__item">
+                        <a href="https://64aa5dec36a1f1786dddd8ab--charming-sunshine-7476de.netlify.app/" class="projects__link">Nat Geo Wild: LION</a>
+                    </li>
+                    <li class="projects__item">
+                        <a href="http://u90236xy.beget.tech/" class="projects__link">Tourist route constructor</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="education" id="education">
+                <h2 class="title">
+                    EDUCATION
+                </h2>
+                <p class="education__university">
+                    Volgograd State Technical University
+                </p>
+            </section>
+            <section class="languages" id="languages">
+                <h2 class="title">
+                    LANGUAGES
+                </h2>
+                <ul class="languages__list">
+                    <li class="languages__item">
+                        English - Pre-Intermediate(A2)
+                    </li>
+                    <li class="languages__item">
+                        Russian - native
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
     <footer class="footer">
         <div class="container">
-
+            <div class="footer__div">
+                &copy; 2023
+                <a href="https://github.com/dkondr" class="footer__github">dkondr</a>
+            </div>
+            <a href="https://rs.school/js/" class="rss">
+                <img src="./assets/svg/rss.svg" alt="" class="rss__logo">
+            </a>
         </div>
     </footer>
 </body>
