fix: upd and change layout and styles

--- a/index.html
+++ b/index.html
@@ -41,18 +41,19 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <section class="profile" id="profile">
+        <div class="container  main__container">
+            <section class="profile " id="profile">
                 <img src="./assets/img/avatar.png" alt="avatar" class="profile__img">
-                <h1 class="h1">
-                    DMITRII KONDRATSKII
-                </h1>
-                <div class="profile__line"></div>
-                <p class="profile__description">
-                    JUNIOR FRONT-END DEVELOPER
-                </p>
+                <div class="profile__title">
+                    <h1 class="h1">
+                        DMITRII KONDRATSKII
+                    </h1>
+                    <p class="profile__description">
+                        JUNIOR FRONT-END DEVELOPER
+                    </p>
+                </div>
             </section>
-            <section class="contacts" id="contacts">
+            <section class="contacts section" id="contacts">
                 <h2 class="title">
                     CONTACTS
                 </h2>
@@ -74,7 +75,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="summary" id="summary">
+            <section class="summary section" id="summary">
                 <h2 class="title">
                     SUMMARY
                 </h2>
@@ -82,7 +83,7 @@
                     I like information technology, web programming and everything related to computer science. I have a main job. Programming is a hobby for me. I have no practical experience in programming. I became an RSSchool student to gain experience in IT, as well as the necessary skills and practice. I am open to offers, I will be glad to join Open Source projects, as well as work under the leadership of a mentor. I am not afraid to set challenging goals and achieve them.
                 </p>
             </section>
-            <section class="skills" id="skills">
+            <section class="skills section" id="skills">
                 <h2 class="title">
                     SKILLS
                 </h2>
@@ -101,24 +102,24 @@
                     </li>
                     <li class="skills__item">
                         <a href="https://www.codewars.com/users/dkondr/badges/small" class="skills__link">
-                            <img src="https://www.codewars.com/users/dkondr/badges/large" alt="Codewarrior Profile Badges">
+                            <img src="https://www.codewars.com/users/dkondr/badges/small" alt="Codewarrior Profile Badges">
                         </a>
                     </li>
                 </ul>
             </section>
-            <section class="code" id="code">
+            <section class="code section" id="code">
                 <h2 class="title">
                     CODE
                 </h2>
-                <pre>
-                    <code>
-                        function even_or_odd(number) {
-                            return number = ( number % 2 === 0) ? "Even" : "Odd";
-                        }
+                <pre class="code__pre">
+                    <code data-language="javascript" class="code__source">
+function even_or_odd(number) {
+    return number = ( number % 2 === 0) ? "Even" : "Odd";
+}
                     </code>
                 </pre>
             </section>
-            <section class="courses" id="courses">
+            <section class="courses section" id="courses">
                 <h2 class="title">
                     COURSES
                 </h2>
@@ -133,11 +134,11 @@
                         <a href="" class="courses__link">HTMLacademy - simulators, marathons and skills</a>
                     </li>
                     <li class="courses__item">
-                        <a href="" class="courses__link">YouTube channel "JavaRush" - Harvard CS50 - 2016</a>
+                        <a href="" class="courses__link">YouTube channel "JavaRush" - Harvard CS50(2016)</a>
                     </li>
                 </ul>
             </section>
-            <section class="projects" id="projects">
+            <section class="projects section" id="projects">
                 <h2 class="title">
                     PROJECTS
                 </h2>
@@ -150,7 +151,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="education" id="education">
+            <section class="education section" id="education">
                 <h2 class="title">
                     EDUCATION
                 </h2>
@@ -158,7 +159,7 @@
                     Volgograd State Technical University
                 </p>
             </section>
-            <section class="languages" id="languages">
+            <section class="languages section" id="languages">
                 <h2 class="title">
                     LANGUAGES
                 </h2>
