fix: upd all sections, addicons, lists, fix styles in css

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
                 <h2 class="title">
                     CONTACTS
                 </h2>
-                <ul class="contats__list">
+                <ul class="contacts__list">
                     <li class="contacts__item">
-                        <a href="#" class="contacts__link">Volzhskiy, Russia</a>
+                        <a href="https://goo.gl/maps/s38BqBgwh7eDBvPw7" class="contacts__link">Volzhskiy, Russia</a>
                     </li>
                     <li class="contacts__item">
-                        <a href="" class="contacts__link mail">dkondr34@mail.ru</a>
+                        <a href="mailto:dkondr34@mail.ru" class="contacts__link mail">e-mail</a>
                     </li>
                     <li class="contacts__item">
-                        <a href="" class="contacts__link github">dkondr</a>
+                        <a href="https://github.com/dkondr" class="contacts__link github">dkondr</a>
                     </li>
                     <li class="contacts__item">
-                        <a href="" class="contacts__link telegram">@dkondr34</a>
+                        <a href="https://telegram.org/" class="contacts__link telegram">@dkondr34</a>
                     </li>
                     <li class="contacts__item">
-                        <a href="" class="contacts__link discord">dkondr34</a>
+                        <a href="https://discord.com/" class="contacts__link discord">dkondr34</a>
                     </li>
                 </ul>
             </section>
@@ -125,16 +125,16 @@ function even_or_odd(number) {
                 </h2>
                 <ul class="courses__list">
                     <li class="courses__item">
-                        <a href="" class="courses__link">Hexlet - JavaScript for beginner</a>
+                        <a href="#" class="courses__link">Hexlet - JavaScript for beginner</a>
                     </li>
                     <li class="courses__item">
-                        <a href="" class="courses__link">ITVDN - "JavaScript starter"</a>
+                        <a href="#" class="courses__link">ITVDN - "JavaScript starter"</a>
                     </li>
                     <li class="courses__item">
                         <a href="" class="courses__link">HTMLacademy - simulators, marathons and skills</a>
                     </li>
                     <li class="courses__item">
-                        <a href="" class="courses__link">YouTube channel "JavaRush" - Harvard CS50(2016)</a>
+                        <a href="#" class="courses__link">YouTube channel "JavaRush" - Harvard CS50(2016)</a>
                     </li>
                 </ul>
             </section>
@@ -175,13 +175,13 @@ function even_or_odd(number) {
         </div>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer__container">
             <div class="footer__div">
                 &copy; 2023
                 <a href="https://github.com/dkondr" class="footer__github">dkondr</a>
             </div>
             <a href="https://rs.school/js/" class="rss">
-                <img src="./assets/svg/rss.svg" alt="" class="rss__logo">
+                <img src="./assets/svg/rss.svg" alt="rs school logo" class="rss__logo">
             </a>
         </div>
     </footer>
